# ProductPickUpper

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: .env  key.pem and cert.pem go here.txt
extra/: MYSQLSetupScript.sql
src/: main.rs
src/controllers/: mod.rs
src/controllers/Token/: access.rs  mod.rs  refresh.rs
src/controllers/User/: userDelete.rs  userGet.rs  userPatch.rs  userPost.rs
src/controllers/ZipCode/: zipcodeDelete.rs  zipcodeGet.rs  zipcodePatch.rs  zipcodePost.rs
src/handlers/: mod.rs
src/handlers/Token/: login.rs
src/handlers/User/: mod.rs  userDelete.rs  userGet.rs  userPatch.rs  userPost.rs
src/handlers/ZipCode/: mod.rs  zipcodeDelete.rs  zipcodeGet.rs  zipcodePatch.rs  zipcodePost.rs
src/models/: App.rs  Token.rs  User.rs  ZipCode.rs  mod.rs  structsApp.rs  structsHandler.rs
src/shared/: auth.rs  chrono.rs  errorHandling.rs  mod.rs  password.rs  random.rs  structs.rs
src/shared/structs/: structsApp.rs  structsHandler.rs
