[package]
name = "productpickupper"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
owo-colors = "3"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "mysql", "macros", "chrono" ] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rust-argon2 = "2.1"
dotenvy = "0.15"
rand = "0.8"
regex = "1.10"