[package]
name = "productpickupper"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4", features = ["openssl"] }
actix-web-httpauth = "0.8"
actix-web-lab = "0.20.2"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.17"
dotenvy = "0.15"
futures = "0.3.30"
openssl = { version = "0.10" }
owo-colors = "4"
rand = "0.8"
regex = "1.10"
rust-argon2 = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha256 = "1.5.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "macros",
    "chrono",
] }
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
